force-app/main/default/objects/CG_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CG_Annual_Running_No__c</fullName>
        <inlineHelpText>CG-{yyyy}-02-{0000}</inlineHelpText>
        <label>CG Annual Running No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CG_Manual_Running_No__c</fullName>
        <inlineHelpText>CG-{yyyy}-03-{0000}</inlineHelpText>
        <label>CG Manual Running No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CG_New_User_Running_No__c</fullName>
        <inlineHelpText>CG-{yyyy}-01-{0000}</inlineHelpText>
        <label>CG New User Running No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI_Annual_Running_No__c</fullName>
        <inlineHelpText>COI-{yyyy}-03-{0000}</inlineHelpText>
        <label>COI Annual Running No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI_Incident_Running_No__c</fullName>
        <inlineHelpText>Format COI-{yyyy}-01-{0000}</inlineHelpText>
        <label>COI Incident Running No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COI_New_User_Running_No__c</fullName>
        <inlineHelpText>COI-{yyyy}-02-{0000}</inlineHelpText>
        <label>COI New User Running No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Running_No__c</fullName>
        <inlineHelpText>GIFT-{yyyy}-{0000}</inlineHelpText>
        <label>Gift Running No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CG Config</label>
</CustomObject>